# kafka-serde

./: CONTRIBUTING.md  Cargo.toml  LICENSE-3rdparty.csv  README.md
.circleci/: config.yml
src/: de.rs  error.rs  lib.rs  ser.rs
